force-app/main/default/objects/CBK_PurgeProcess__c/CBK_PurgeProcess__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para la gestión de los procesos de purgado</description>
    <label>Purge Process</label>
    <nameField>
        <displayFormat>PG-{0000000000}</displayFormat>
        <label>Nombre del proceso de purgado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purge Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>