force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Activo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso dep purgado ha de mantenerse activo</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>