force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_BatchSize__c.field-meta.xml
<CustomField>
    <fullName>CBK_BatchSize__c</fullName>
    <description>Tamaño del batch de purgado</description>
    <label>Tamaño Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>