force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_condicionClausula__c.field-meta.xml
<CustomField>
    <fullName>CBK_condicionClausula__c</fullName>
    <description>Clausula adicional a incluir en la consulta de purgado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Condicion Clausula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>