force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_DeleteDetails__c.field-meta.xml
<CustomField>
    <fullName>CBK_DeleteDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detalles de borrado</label>
    <type>Checkbox</type>
</CustomField>