force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Dependencia__c.field-meta.xml
<CustomField>
    <fullName>CBK_Dependencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proceso de purgado que ha de ejecutarse previamente al proceso de purgado (Dependecia de este proceso respecto al indicado en este campo).</description>
    <label>Proceso de purgado predecesor</label>
    <referenceTo>CBK_PurgeProcess__c</referenceTo>
    <relationshipLabel>Dependent Purge Processes</relationshipLabel>
    <relationshipName>Purge_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>