force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_diasAntiguedadMinima__c.field-meta.xml
<CustomField>
    <fullName>CBK_diasAntiguedadMinima__c</fullName>
    <description>Antigüedad mínima en número de días previos ( desde la fecha de ejecución) del proceso de purgado sobre los que se han de eliminar los registros previos recuperados que cumplan las condiciones</description>
    <label>Antigüedad Mínima Purgado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>