force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Domingo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Domingo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el domingo.</description>
    <label>Domingo</label>
    <type>Checkbox</type>
</CustomField>