force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Email_Notif__c.field-meta.xml
<CustomField>
    <fullName>CBK_Email_Notif__c</fullName>
    <description>Email Notificación Errores</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Notificación Errores</label>
    <type>Email</type>
</CustomField>