force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Estado__c.field-meta.xml
<CustomField>
    <fullName>CBK_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
                <default>true</default>
                <label>Borrador</label>
            </value>
            <value>
                <fullName>En revisión</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>