force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_HardDelete__c.field-meta.xml
<CustomField>
    <fullName>CBK_HardDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de que tras el borrado de los registros, se realice la eliminación de los mismos de la papelera de reciclaje</description>
    <label>Eliminación de la papelera de reciclaje</label>
    <type>Checkbox</type>
</CustomField>