force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Jueves__c.field-meta.xml
<CustomField>
    <fullName>CBK_Jueves__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el jueves</description>
    <label>Jueves</label>
    <type>Checkbox</type>
</CustomField>