force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_LastExec_Sched__c.field-meta.xml
<CustomField>
    <fullName>CBK_LastExec_Sched__c</fullName>
    <description>Fecha de ejecución planificada (Planificación Última Ejecución en FW Batch)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Para el calculo de la próxima ejecución se ha de tener en cuenta que se utilizará la siguiente fecha/hora calculada en función de este dato así como los valores de periodicidad y días hábiles.</inlineHelpText>
    <label>Fecha/hora Calculo Planificación Purgado</label>
    <type>DateTime</type>
</CustomField>