force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_limitValue__c.field-meta.xml
<CustomField>
    <fullName>CBK_limitValue__c</fullName>
    <description>Número de registros límite que se tratarán en el proceso de purgado.</description>
    <label>Número Registros limite Purgado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>