force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Lunes__c.field-meta.xml
<CustomField>
    <fullName>CBK_Lunes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el lunes</description>
    <label>Lunes</label>
    <type>Checkbox</type>
</CustomField>