force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Martes__c.field-meta.xml
<CustomField>
    <fullName>CBK_Martes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el martes</description>
    <label>Martes</label>
    <type>Checkbox</type>
</CustomField>