force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Miercoles__c.field-meta.xml
<CustomField>
    <fullName>CBK_Miercoles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el miercoles</description>
    <label>Miercoles</label>
    <type>Checkbox</type>
</CustomField>