force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Notif__c.field-meta.xml
<CustomField>
    <fullName>CBK_Notif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notificar errores</description>
    <label>Notificación Errores</label>
    <type>Checkbox</type>
</CustomField>