force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_objetoPurgado__c.field-meta.xml
<CustomField>
    <fullName>CBK_objetoPurgado__c</fullName>
    <description>Objeto sobre el que se aplicará el proceso de purgado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Objeto Purgado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>