force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Periodicidad__c.field-meta.xml
<CustomField>
    <fullName>CBK_Periodicidad__c</fullName>
    <description>Numero de días de intervalo entre ejecuciones en los que se volverá a ejecutar el proceso batch</description>
    <label>Periodicidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>