force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Priority__c.field-meta.xml
<CustomField>
    <fullName>CBK_Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Prioridad a informar en la planificación de proceso. Por defecto, su valor es 1. se puede incrementar el valor (bajar en el orden de prioridades) para los procesos encadenados.</description>
    <label>Prioridad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>