force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Project__c.field-meta.xml
<CustomField>
    <fullName>CBK_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Proyecto al que pertenece el borrado creado</description>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Purge Processes</relationshipLabel>
    <relationshipName>Purge_Processes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>