force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_RTsDevNames__c.field-meta.xml
<CustomField>
    <fullName>CBK_RTsDevNames__c</fullName>
    <description>Nombres de los tipos de registro (developer names)  que se procesarán en el proceso depurgado. Concatenados por una coma en caso de tratarse de más de un tipo de registro.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DevNames RTs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>