force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Sabado__c.field-meta.xml
<CustomField>
    <fullName>CBK_Sabado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el sábado.</description>
    <label>Sabado</label>
    <type>Checkbox</type>
</CustomField>