force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_usoFechaSysModTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CBK_usoFechaSysModTimestamp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se utilizará la fecha de la última actualización del registro para el purgado(en caso negativo se utilizará la fecha de creación)</description>
    <label>Uso Fecha SysModTimestamp</label>
    <type>Checkbox</type>
</CustomField>