force-app/main/default/objects/CBK_PurgeProcess__c/fields/CBK_Viernes__c.field-meta.xml
<CustomField>
    <fullName>CBK_Viernes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el proceso se ha de ejecutar el viernes</description>
    <label>Viernes</label>
    <type>Checkbox</type>
</CustomField>