force-app/main/default/objects/CBK_PurgeProcess__c/validationRules/CBK_PurgeProcess_ActiveProcess.validationRule-meta.xml
<ValidationRule>
    <fullName>CBK_PurgeProcess_ActiveProcess</fullName>
    <active>true</active>
    <description>Regla para controlar que un proceso de purgado solo pueda activado en el caso de encontrarse en estado autorizado</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(CBK_Estado__c, &apos;Autorizado&apos;)), CBK_Activo__c == true)</errorConditionFormula>
    <errorMessage>Un proceso de purgado no puede encontrarse activo si no se encuentra en el estado autorizado.</errorMessage>
</ValidationRule>