force-app/main/default/objects/CBK_PurgeProcess__c/validationRules/CBK_PurgeProcess_AdminChangeActive.validationRule-meta.xml
<ValidationRule>
    <fullName>CBK_PurgeProcess_AdminChangeActive</fullName>
    <active>true</active>
    <description>Solamente los usuarios autorizados pueden cambiar el valor del campo Activo.</description>
    <errorConditionFormula>AND(
				OR (ISCHANGED(CBK_Activo__c),CBK_Activo__c==true), 
				NOT($Permission.CBK_PurgeAuth)
)</errorConditionFormula>
    <errorMessage>Solamente los usuarios autorizados pueden cambiar el valor del campo Activo o activar un proceso de purgado.</errorMessage>
</ValidationRule>