force-app/main/default/objects/CBK_PurgeProcess__c/validationRules/CBK_PurgeProcess_ModifyActiveProcess.validationRule-meta.xml
<ValidationRule>
    <fullName>CBK_PurgeProcess_ModifyActiveProcess</fullName>
    <active>true</active>
    <description>Regla de validación para asegurar que proceso de purgado activo solamente puede ser modificado por un usuario autorizado.</description>
    <errorConditionFormula>AND(CBK_Activo__c==true,NOT($Permission.CBK_PurgeAuth))</errorConditionFormula>
    <errorMessage>Un proceso de purgado activo solamente puede ser modificado por un usuario autorizado.</errorMessage>
</ValidationRule>