force-app/main/default/objects/CBK_PurgeProcess__c/validationRules/CBK_PurgeProcess_PriorityValue.validationRule-meta.xml
<ValidationRule>
    <fullName>CBK_PurgeProcess_PriorityValue</fullName>
    <active>true</active>
    <description>Validation Rule para controlar que el valor informado en la prioridad de la planificación sea válido</description>
    <errorConditionFormula>OR(ISBLANK(CBK_Priority__c),CBK_Priority__c&lt;=0)</errorConditionFormula>
    <errorMessage>Se debe especificar un valor válido para prioridad de la planificación del batch (valor entero positivo superior o igual a 1).</errorMessage>
</ValidationRule>