force-app/main/default/objects/CBK_PurgeProcess__c/listViews/CBK_PurgeProcess_Todos_los_procesos_de_purgado.listView-meta.xml
<ListView>
    <fullName>CBK_PurgeProcess_Todos_los_procesos_de_purgado</fullName>
    <columns>NAME</columns>
    <columns>CBK_Activo__c</columns>
    <columns>CBK_Estado__c</columns>
    <columns>CBK_objetoPurgado__c</columns>
    <columns>CBK_RTsDevNames__c</columns>
    <columns>CBK_diasAntiguedadMinima__c</columns>
    <columns>CBK_diasAntiguedadMaxima__c</columns>
    <columns>CBK_condicionClausula__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los procesos de purgado</label>
</ListView>